src/test/ui/parser/pat-tuple-4.stderr
error: expected one of `)` or `,`, found `pat`
  --> $DIR/pat-tuple-4.rs:3:13
   |
LL |         (.. pat) => {}
   |             ^^^ expected one of `)` or `,` here

error: aborting due to previous error

