src/test/ui/parser/pat-tuple-4.rs
fn main() {
    match 0 {
        (.. pat) => {} //~ ERROR expected one of `)` or `,`, found `pat`
    }
}
